--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a {
   text-decoration: none;
 }
 img {
-  max-width: 100px;
+  max-width: 100%;
 }
 
 /* Grid Geral*/
@@ -34,20 +34,80 @@ img {
 
 .header {
   grid-area: header;
+  background: linear-gradient(135deg, #8844EE, #B07DFB);
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr auto; 
+  align-items: center;
 }
+
+.logo {
+  max-width: 200px;
+}
+
+.header nav ul {
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.header nav a {
+  display: block;
+  padding: 10px;
+  color: white;
+  font-size: 1.125em;
+  background: rgba(0,0,0,.1);
+  border-radius: 5px;
+  transition: 0.1s;
+}
+
+.header nav a:hover{
+  background: rgba(0,0,0,.5);
+
+}
+.header li + li {
+  margin-left: 30px;
+}
+
+/* SIDENAV */
+
 
 .sidenav {
   grid-area: sidenav;
+  background: #FAFBFC;
+  padding: 30px;
 }
+
+.sidenav li a {
+  display: block;
+  min-width: 60px;
+  max-width: 100px;
+  margin: 0 auto 30px auto;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
+  transition: .1s ease-out;
+}
+
+.sidenav li a:hover {
+  background: #B07DFB;
+}
+
+/*CONTENT */
 
 .content {
   grid-area: content;
 }
 
+/*ANUNCIOS */
 .anuncios {
-  grid-area: 'anuncios'
+  grid-area: 'anuncios';
+  background: #fafbfc;
+  display: grid;
 }
 
+/* FOOTER */
 .footer {
   grid-area: 'footer'
+  
 }
