--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ a {
   text-decoration: none;
 }
 img {
-  max-width: 100%;
+  width: 100%;
+  display: block;
+  border-radius: 5px;
 }
 
 /* Grid Geral*/
@@ -25,19 +27,41 @@ img {
 .estrutura {
   display: grid;
   grid-template-columns: minmax(160px, 1fr) 3fr 300px;
-  grid-template-areas: 
+  grid-template-areas:
     "header header header"
     "sidenav content anuncios"
-    "footer footer footer"
-  ;
+    "footer footer footer";
 }
 
+@media (max-width: 1200px) {
+  .estrutura {
+    grid-template-areas:
+      "header header header"
+      "sidenav content content"
+      "sidenav anuncios anuncios"
+      "footer footer footer";
+  }
+}
+
+@media (max-width: 760px) {
+  .estrutura {
+    grid-template-columns: 100%;
+    grid-template-areas:
+      "header"
+      "sidenav"
+      "content"
+      "anuncios"
+      "footer";
+  }
+}
+
+/* HEADER */
 .header {
   grid-area: header;
-  background: linear-gradient(135deg, #8844EE, #B07DFB);
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
   padding: 30px;
   display: grid;
-  grid-template-columns: 1fr auto; 
+  grid-template-columns: 1fr auto;
   align-items: center;
 }
 
@@ -46,7 +70,7 @@ img {
 }
 
 .header nav ul {
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
 }
 
@@ -55,25 +79,39 @@ img {
   padding: 10px;
   color: white;
   font-size: 1.125em;
-  background: rgba(0,0,0,.1);
+  background: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   transition: 0.1s;
 }
 
-.header nav a:hover{
-  background: rgba(0,0,0,.5);
-
+.header nav a:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
 .header li + li {
   margin-left: 30px;
 }
 
-/* SIDENAV */
+@media (max-width: 760px) {
+  .header {
+    grid-template-columns: auto;
+  }
+  .logo {
+    margin-bottom: 20px;
+  }
 
+  .header nav a {
+    font-size: 1em;
+  }
+
+  .header li + li {
+    margin-left: 10px;
+  }
+}
+/* SIDENAV */
 
 .sidenav {
   grid-area: sidenav;
-  background: #FAFBFC;
+  background: #fafbfc;
   padding: 30px;
 }
 
@@ -85,29 +123,204 @@ img {
   background: white;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 5px 5px 15px 0px rgba(44,44,44,0.15);
-  transition: .1s ease-out;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  transition: 0.1s ease-out;
 }
 
 .sidenav li a:hover {
-  background: #B07DFB;
+  background: #b07dfb;
+}
+
+@keyframes seta {
+  from {
+    right: 30px;
+  }
+  to {
+    right: 20px;
+  }
+}
+@media (max-width: 760px) {
+  .sidenav {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    position: relative;
+  }
+
+  .sidenav::after {
+    content: "→";
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    color: rgba(0, 0, 0, 0.3);
+    animation: seta 0.5s ease-in 0s infinite;
+  }
+  .sidenav ul {
+    display: flex;
+  }
+
+  .sidenav li {
+    flex: 1 0 60px;
+  }
+
+  .sidenav {
+    padding: 0 30px;
+  }
+
+  .sidenav li a {
+    margin: 30px 30px 30px 0;
+  }
 }
 
 /*CONTENT */
 
 .content {
   grid-area: content;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+}
+
+@media (max-width: 600px) {
+  .content {
+    grid-template-columns: auto;
+  }
+}
+.col-wide {
+  grid-column: 1 / -1;
+}
+
+.imagem-1 {
+  grid-row: span 2;
+  align-self: end;
+}
+.imagem-2 {
+  align-self: end;
+}
+
+/* ESTILOS CONTENT */
+p {
+  font-size: 1.2em;
+  line-height: 1.6;
+  letter-spacing: -0.005em;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+/* TÍTULO */
+
+.titulo {
+  color: #b07dfb;
+}
+
+.titulo h1 {
+  font-size: 3.75em;
+  line-height: 1;
+  font-weight: 700;
+}
+
+/* CARACTERISTICAS */
+
+.caracteristicas {
+  display: flex;
+  align-items: flex-start;
+}
+
+.caracteristicas > div {
+  width: 80px;
+  text-align: center;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  position: relative;
+}
+
+.caracteristicas > div:first-child {
+  margin-right: 30px;
+}
+
+.caracteristicas span {
+  display: block;
+  color: #b07dfb;
+}
+.numero {
+  color: #b07dfb;
+  font-size: 3em;
+  line-height: 1;
+  margin: 10px auto;
+}
+
+.rotulo {
+  background: white;
+  border-radius: 0 0 5px 5px;
+  padding: 5px 0;
+  position: relative;
+  top: 2px;
+}
+
+.destaque {
+  font-size: 0.875em;
+  color: #b07dfb;
+  max-width: 16em;
+}
+
+.citacao,
+.atributos {
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+  align-self: start;
+}
+
+.citacao p {
+  font-size: 1.25em;
+  font-style: italic;
+  max-width: 500px;
+  margin: 0 auto;
+  color: white;
+}
+
+.atributos li {
+  color: white;
+  font-family: Courier, monospace;
+  font-size: 1.2em;
+  padding: 15px;
+}
+
+.atributos li + li {
+  border-top: 2px solid #b07dfb;
+}
+
+.titulo span {
+  font-size: 0.875em;
+  font-style: italic;
+}
+.informacoes p + p {
+  margin-top: 30px;
 }
 
 /*ANUNCIOS */
 .anuncios {
-  grid-area: 'anuncios';
+  grid-area: anuncios;
   background: #fafbfc;
   display: grid;
+  align-content: start;
+  padding: 30px;
+  grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 /* FOOTER */
 .footer {
-  grid-area: 'footer'
-  
+  grid-area: footer;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+}
+
+.footer p {
+  color: white;
+  text-align: center;
+  padding: 30px;
 }
